# csv_file_handler

./: .gitignore  README.md  example.csv  main.py  pyproject.toml
src/: agrigation.py  csv_processor.py  exceptions.py  operators.py
tests/: conftest.py  test_agregation.py  test_csv_processor.py  test_main.py  test_operators.py
